Review Picnic's refaster rule suggestions